Fix broken link to improve observability section

--- a/source/direction/geo/geo_replication/index.html.md.erb
+++ b/source/direction/geo/geo_replication/index.html.md.erb
@@ -55,7 +55,7 @@ Our vision for Geo-replication is for new Geo sites to be easily deployable to n
 
 We will achieve 100% replication and verification of all core GitLab data types by leveraging the [self-service framework](https://docs.gitlab.com/ee/development/geo/framework.html). The self-service frame will allow other GitLab teams to easily add new data types to Geo ensuring Geo evolves with GitLab to meet the needs of our customers. 
 
-System administrators will have [end-to-end observability]((#improve-observability)) of the replication process for each site via the UI with capabilities to troubleshoot and remediate failures. Make it easy for the systems administrator to understand what Geo operations are upcoming, in progress, completed and failed. For failed operations, Geo will provide information and capabilities in the UI to allow the system administrator to correct the fault.
+System administrators will have [end-to-end observability](#improve-observability) of the replication process for each site via the UI with capabilities to troubleshoot and remediate failures. Make it easy for the systems administrator to understand what Geo operations are upcoming, in progress, completed and failed. For failed operations, Geo will provide information and capabilities in the UI to allow the system administrator to correct the fault.
 
 Geo will [accelerate more data types](#accelerate-more data-types) enabling more tasks to be accomplished with a data stored at the secondary sites thus helping to redistribute the load on the primary site. Geo will continue to intelligently proxy requests back to the primary when necessary to provide access to the most up-to-date data.
   
