--- a/sites/handbook/source/handbook/engineering/development/data-science/anti-abuse/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/data-science/anti-abuse/index.html.md.erb
@@ -22,6 +22,19 @@ Our goal is to provide Insider Threat features for your applications as well as 
 - We make data-driven decisions.
 - Everyone can contribute to our work.
 
+### Collaboration
+
+You are encouraged to work as closely as needed with our [Data Science section stable counterparts](https://about.gitlab.com/handbook/product/categories/#data-science-section).
+
+Other teams that we might collaborate with include but are not limited to:
+
+* [Manage:Authentication and Authorization](https://about.gitlab.com/handbook/engineering/development/dev/manage/authentication-and-authorization/#group-members)
+* [Fulfillment:Fulfillment Platform](https://about.gitlab.com/handbook/engineering/development/fulfillment/fulfillment-platform/#team-members)
+
+Here are some examples of when to engage with your counterpart:
+
+* [Seeking a Manage:Authentication and Authorization review when making a significant change to the registration flow](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/99193#note_1120182366)
+* [Seeking a Fulfillment review when making a change involving Zuora](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/96994#note_1089045221)
 
 ## Direction
 
