--- a/source/stylesheets/release-posts.css.scss
+++ b/source/stylesheets/release-posts.css.scss
@@ -417,6 +417,7 @@ h3,
 .release-post-section#tertiary,
 .release-post-section#deprecations,
 .release-post-section#removals,
+.release-post-section#upgrade-warning,
 .release-post-section#extras {
   max-width: 800px;
 }
