Add product designers to Features

--- a/sites/handbook/source/handbook/product/categories/features/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/categories/features/index.html.md.erb
@@ -28,6 +28,8 @@ This page is meant to showcase the features by tier across GitLab's Product Hier
         <% groupLine << "Product Management: #{team_links_from_group(group: group.pm_team_tag)}" if group.pm_team_tag %>
         <% groupLine << "Product Manager".pluralize([*group.pm].count) + ": " + [*group.pm].map{ |pm| "[#{pm}]" }.join(", ") if group.pm %>
         <% groupLine << "Product Marketing Manager: [#{group.pmm}]" if group.pmm %>
+        <% groupLine << "Staff Product Designer".pluralize([*group.spd].count) + ": " + [*group.spd].map{ |spd| "[#{spd}]" }.join(", ") if group.spd %>
+        <% groupLine << "Product Designer".pluralize([*group.ux].count) + ": " + [*group.ux].map{ |ux| "[#{ux}]" }.join(", ") if group.ux %>
         <% groupLine << "Engineering Manager: [#{group.em}]" if group.em %>
         <% groupLine << "Fullstack Managers: " + Array(group.fullstack_managers).map{ |fem| "[#{fem}]"}.join(", ") if group.fullstack_managers %>
         <% groupLine << "Backend Engineering Manager: [#{group.backend_engineering_manager}]" if group.backend_engineering_manager %>
